<?xml version="1.0" encoding="UTF-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
   <name>costmap_to_point</name>
   <version>0.0.0</version>
   <description>costmap_to_point</description>
   <maintainer email="keeeesukee@gmail.com">maleicacid</maintainer>
   <license>Apache-2.0</license>
   
   <buildtool_depend>ament_cmake</buildtool_depend>
   <depend>ament_cmake_auto</depend>
   <depend>rclcpp</depend>
   <depend>rclcpp_components</depend>
   <depend>sensor_msgs</depend>
   <depend>grid_map</depend>
   <depend>grid_map_ros</depend>
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ouxt_lint_common</test_depend>
   <export>
      <build_type>ament_cmake</build_type>
   </export>
</package>